# prisma-parser

./: Cargo.toml  LICENSE  prisma.grm
src/: lib.rs  main.rs
src/corpus/: smol.prisma  test.prisma
src/fixtures/: smol.prisma  test.prisma
src/lexer/: mod.rs  token.rs  token_type.rs
src/parser/: datasource.rs  enum.rs  func.rs  generator.rs  mod.rs  model.rs  node.rs  object.rs  terminal.rs
tests/: lexer.rs
