[package]
name = "pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { version = "0.8.0", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
